// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the CardWrapper component should accept a backgroundColor 1`] = `
<div
  className="CardWrapper__Card-sc-1t3lqai-0 kqtJAp ui-kit.Card.CardWrapper"
>
  Boom!
</div>
`;

exports[`the CardWrapper component should accept additional props 1`] = `
<div
  className="CardWrapper__Card-sc-1t3lqai-0 laMMbc ui-kit.Card.CardWrapper"
  role="article listitem"
>
  Boom!
</div>
`;

exports[`the CardWrapper component should accept and render passed in styles 1`] = `
<div
  className="CardWrapper__Card-sc-1t3lqai-0 laMMbc ui-kit.Card.CardWrapper"
  style={
    Object {
      "paddingTop": "56.25%",
      "width": "100%",
    }
  }
>
  Boom!
</div>
`;

exports[`the CardWrapper component should render 1`] = `
<div
  className="CardWrapper__Card-sc-1t3lqai-0 laMMbc ui-kit.Card.CardWrapper"
>
  Boom!
</div>
`;
